# lsh-book-recommendation

./: .gitignore  Makefile  README.md  pyproject.toml
config/: cluster.env  dev.env  settings.py
docker/: Dockerfile.dev  docker-compose.yml
docs/: code-standards.md  codebase-summary.md  databricks-setup-guide.md  deployment-guide.md  docker-dev-guide.md  lsh-pipeline-walkthrough.md  project-changelog.md  project-overview-pdr.md  project-roadmap.md  quick-start-10-books.md  system-architecture.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing_demo.ipynb  03_lsh_pipeline_demo.ipynb  04_experiments.ipynb  05_query_demo.ipynb
plans/260303-0856-docker-pyspark-jupyter-setup/: phase-01-docker-configuration.md  phase-02-test-notebook.md  plan.md
plans/260428-1134-notebook-04-serverless-compat-audit/: phase-01-serverless-compat-patch.md  plan.md
scripts/: __init__.py  bootstrap-nltk-stopwords-to-volume.py  download_and_upload_gutenberg.py  fetch_gutenberg_bookshelf.py  generate_sample_dataset.py  gutenberg_downloader.py  hdfs_uploader.py  run_pipeline.sh  setup_cluster.sh  text_cleaning_utils.py  upload_data.sh
src/: baseline_main.py  lsh.py  main.py  minhash.py  prepare_sample.py  preprocessing.py  query.py  query_by_text_helpers.py  shingling.py
tests/: conftest.py  test_lsh.py  test_minhash.py  test_preprocessing.py  test_query.py  test_shingling.py
